After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695832 - audio: a print causes a floating point exception
audio: a print causes a floating point exception
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-14 10:02 UTC by Marc Leeman
Modified: 2013-03-15 09:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
only print when not dividing by 0 (1.36 KB, patch)
2013-03-14 10:02 UTC, Marc Leeman
committed Details | Review

Description Marc Leeman 2013-03-14 10:02:10 UTC
Created attachment 238853 [details] [review]
only print when not dividing by 0

division by 0
Comment 1 David Schleef 2013-03-14 19:18:07 UTC
Please switch this to (bpf != 0) ? (spec->segsize / bpf) : -1 form, rather than making the debug message disappear.  Otherwise, looks good.
Comment 2 Tim-Philipp Müller 2013-03-15 09:08:11 UTC
commit 0fa50b44f075fa0a11fb9db4656ff6cae7f104a2
Author: Marc Leeman <marc.leeman@gmail.com>
Date:   Thu Mar 14 10:58:11 2013 +0100

    audioringbuffer: avoid division by 0 when outputting debug info
    
    https://bugzilla.gnome.org/show_bug.cgi?id=695832
Comment 3 Tim-Philipp Müller 2013-03-15 09:08:42 UTC
Comment on attachment 238853 [details] [review]
only print when not dividing by 0

Committed with changes as suggested.