audioringbuffer: avoid division by 0 when outputting debug info

https://bugzilla.gnome.org/show_bug.cgi?id=695832